feat :  add get products for admin service

--- a/UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -66,6 +66,12 @@
 					<li class="navigation-divider">محصولات</li>
 
 					<li >
+						<a href="/Admin/Products/Index">مدیریت محصولات</a>
+					</li>
+					<li>
+					<a href="/Admin/Products/AddNewProduct">افزودن محصول جدید</a>
+					</li>
+					<li>
 						<a href="/Admin/Products/Categories">دسته بندی ها</a>
 					</li>
 				</ul>
