--- a/UI/Views/Products/Index.cshtml
+++ b/UI/Views/Products/Index.cshtml
@@ -45,7 +45,7 @@
                             <div class="col-lg-3 col-md-3 col-xs-12 order-1 pr d-block mb-3">
                                 <section class="product-box product product-type-simple">
                                     <div class="thumb">
-                                        <a href="#" class="d-block">
+                                        <a href="/Products/Details/@item.Id" class="d-block">
                                             @*<div class="promotion-badge">فروش ویژه</div>*@
                                             @*<div class="product-rate">
                                                 <i class="fa fa-star active"></i>
@@ -61,7 +61,7 @@
                                         </a>
                                     </div>
                                     <div class="title">
-                                        <a href="#">@item.Name</a>
+                                        <a href="/Products/Details/@item.Id">@item.Name</a>
                                     </div>
                                     <div class="price">
                                         <span class="amount">
