refactor: change logo

--- a/UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -84,9 +84,9 @@
             <!-- begin::header logo -->
             <div class="header-logo">
                 <a href="index.html">
-                    <img class="large-logo" src="/assets/media/image/logo.png" alt="image">
-                    <img class="small-logo" src="/assets/media/image/logo-sm.png" alt="image">
-                    <img class="dark-logo" src="/assets/media/image/logo-dark.png" alt="image">
+				<img class="large-logo" src="~/assets/images/logo.png" alt="image">
+				<img class="small-logo" src="~/assets/images/logo.png" alt="image">
+				<img class="dark-logo" src="~/assets/images/logo.png" alt="image">
                 </a>
             </div>
             <!-- end::header logo -->
