--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <div class="col-lg-3 pr">
                                 <div class="header-logo row text-right">
                                     <a href="#">
-                                        <img src="assets/images/logo.png" alt="دیجی اسمارت">
+                                        <img src="~/assets/images/logo.png" alt="دیجی اسمارت">
                                     </a>
                                 </div>
                             </div>
