feat : Add GetMenu service

--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                                                 <button class="btn btn-search" type="submit">
                                                     <img src="~/assets/images/search.png" alt="search">
                                                 </button>
-                                                <div class="search-filter">
+                                               @* <div class="search-filter">
                                                     <div class="form-ui">
                                                         <div class="custom-select-ui">
                                                             <select class="right">
@@ -58,7 +58,7 @@
                                                             </select>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div>*@
                                             </div>
                                         </form>
                                         <div class="search-result">
@@ -173,187 +173,8 @@
                         </div>
                     </div>
                 </section>
-                <nav class="header-main-nav">
-                    <div class="d-block">
-                        <div class="align-items-center">
-                            <ul class="menu-ul mega-menu-level-one">
-                                <li id="nav-menu-item" class="menu-item nav-overlay">
-                                    <a href="#" class="current-link-menu">
-                                        کالای دیجیتال
-                                    </a>
-                                    <ul class="sub-menu is-mega-menu mega-menu-level-two">
-                                        <li class="menu-mega-item menu-item-type-mega-menu">
-                                            <a href="#" class="mega-menu-link">
-                                                موبایل
-                                            </a>
-                                            <ul class="sub-menu mega-menu-level-three">
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        اپل
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        سامسونگ
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        نوکیا
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        ایسوس
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        هواوی
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        الجی
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        اچ تی سی
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        سونی
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-mega-item menu-item-type-mega-menu">
-                                            <a href="#" class="mega-menu-link">
-                                                تبلت و کتابخوان
-                                            </a>
-                                            <ul class="sub-menu mega-menu-level-three">
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        اپل
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        سامسونگ
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        نوکیا
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        ایسوس
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        ایسر
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        الجی
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        اچ تی سی
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-mega-item menu-item-type-mega-menu">
-                                            <a href="#" class="mega-menu-link">
-                                                کامپیوتر و تجهیزات جانبی
-                                            </a>
-                                            <ul class="sub-menu mega-menu-level-three">
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        هارد دیسک
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        ماوس
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        کیبورد
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        نمایشگر
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        پردازنده
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        مادربرد
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        کارت گرافیک
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-mega-item menu-item-type-mega-menu">
-                                            <a href="#" class="mega-menu-link">
-                                                دوربین
-                                            </a>
-                                            <ul class="sub-menu mega-menu-level-three">
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        دوربین عکاسی
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        دوربین فیلم برداری
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        تلسکوپ
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        میکروسکوپ و ذره بین
-                                                    </a>
-                                                </li>
-                                                <li class="menu-mega-item-three">
-                                                    <a href="#">
-                                                        لوازم جانبی عکاسی و فیلم برداری
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li class="bg-image">
-                                            <img src="~/assets/images/menu-main/digital.png" alt="">
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
+                <!-- Invoke Menu -->
+                @await Component.InvokeAsync("GetMenu")
                 <!--    responsive-megamenu-mobile----------------->
                 <nav class="sidebar">
                     <div class="nav-header">
