feat : Add Searching Service

--- a/UI/Views/Products/Index.cshtml
+++ b/UI/Views/Products/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@using Application.Products.GetProductsForSiteService;
+﻿@using Application.Products.GetProductsForSiteService
 @model List<GetProductsForSiteDto>
-;
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
