--- a/UI/Views/Shared/Components/GetMenu/View.cshtml
+++ b/UI/Views/Shared/Components/GetMenu/View.cshtml
@@ -1,4 +1,4 @@
-﻿@using Application.Categories.GetFullCategroiesService;
+﻿@using Application.Categories.GetFullCategroiesService
 @model List<FullCategoryDto>
 @{
     Layout = null;
@@ -39,6 +39,11 @@
                                 <img src="~/assets/images/menu-main/digital.png" alt="">
                             </li>*@
                         </ul>
+                    </li>
+                    <li class="menu-item nav-overlay">
+                        <a href="/Products" class="current-link-menu">
+                            همه محصولات
+                        </a>
                     </li>
 
                 }
