refactor : delete layout search history

--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -48,7 +48,8 @@
                                                
                                             </div>
                                         </form>
-                                        <div class="search-result">
+                                        @* <div class="search-result">
+                                            
                                             <ul class="search-result-list mb-0">
                                                 <li>
                                                     <a href="#">
@@ -104,8 +105,8 @@
                                                         </button>
                                                     </a>
                                                 </li>
-                                            </ul>
-                                            <div class="localSearchSimple"></div>
+                                            </ul
+                                            <div class="localSearchSimple"></div>>*@
                                         </div>
                                     </div>
                                 </div>
