refactor : some layout changes

--- a/UI/Views/Shared/Components/SearchCategories/View.cshtml
+++ b/UI/Views/Shared/Components/SearchCategories/View.cshtml
@@ -8,7 +8,7 @@
     <div class="form-ui">
         <div class="custom-select-ui">
             <select asp-items=@Model class="right" name="CategoryId">
-                <option>همه دسته ها</option>
+                <option value="">همه دسته ها</option>
             </select>
         </div>
     </div>
