--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                             <div class="col-lg-8 pr">
                                 <div class="header-search row text-right">
                                     <div class="header-search-box">
-                                        <form asp-action="Index" asp-controller="Products" class="form-search">
+                                        <form asp-action="Index" asp-controller="Products" method="get" class="form-search">
                                             <input type="search" class="header-search-input" name="SearchKey"
                                                    placeholder="نام کالا، برند و یا دسته مورد نظر خود را جستجو کنید…">
                                             <div class="action-btns">
@@ -106,8 +106,8 @@
                                                     </a>
                                                 </li>
                                             </ul
-                                            <div class="localSearchSimple"></div>>*@
-                                        </div>
+                                            <div class="localSearchSimple"></div>>
+                                        </div>*@
                                     </div>
                                 </div>
                             </div>
@@ -175,19 +175,19 @@
                 <div class="bottom-menu-joomy">
                     <ul class="mb-0">
                         <li>
-                            <a href="home-1.html">
+                            <a href="/Home/Index">
                                 <i class="fa fa-home"></i>
                                 صفحه اصلی
                             </a>
                         </li>
-                        <li>
+                        @*<li>
                             <a href="#">
                                 <div class="nav-btn nav-slider">
                                     <i class="fa fa-bars" aria-hidden="true"></i>
                                 </div>
                                 دسته بندی ها
                             </a>
-                        </li>
+                        </li>*@
                         <li>
                             <a href="cart.html">
                                 <i class="fa fa-shopping-cart"></i>
@@ -201,12 +201,25 @@
                                 جستجو
                             </a>
                         </li>
-                        <li>
-                            <a href="login.html">
-                                <i class="fa fa-user"></i>
-                                حساب کاربری
-                            </a>
-                        </li>
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <li>
+                                <a href="/authentication/login">
+                                    <i class="fa fa-user"></i>
+                                    ورود یا ثبت نام
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a href="">
+                                    <i class="fa fa-user"></i>
+                                    حساب کاربری
+                                </a>
+                            </li>
+                        }
+
                     </ul>
                 </div>
                 <!--    responsive-megamenu-mobile----------------->
@@ -227,90 +240,17 @@
                 <div class="modal-body">
                     <div class="header-search text-right">
                         <div class="header-search-box">
-                            <form action="#" class="form-search">
-                                <input type="search" class="header-search-input" name="search-input"
+                            <form asp-action="index" asp-controller="Products" method="get" class="form-search">
+                                <input type="search" class="header-search-input" name="SearchKey"
                                        placeholder="نام کالا، برند و یا دسته مورد نظر خود را جستجو کنید…">
                                 <div class="action-btns">
                                     <button class="btn btn-search" type="submit">
                                         <img src="~/assets/images/search.png" alt="search">
                                     </button>
-                                    <div class="search-filter">
-                                        <div class="form-ui">
-                                            <div class="custom-select-ui">
-                                                <select class="right">
-                                                    <option>همه دسته ها</option>
-                                                    <option>کالای دیجیتال</option>
-                                                    <option>آرایشی بهداشتی</option>
-                                                    <option>ابزاری اداری</option>
-                                                    <option>مد پوشاک</option>
-                                                    <option>خانه آشپز خانه</option>
-                                                    <option>لوازم تحریر و هنر</option>
-                                                    <option>کودک و نوزاد</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    @await Component.InvokeAsync("SearchCategories")
                                 </div>
                             </form>
-                            <div class="search-result">
-                                <ul class="search-result-list mb-0">
-                                    <li>
-                                        <a href="#">
-                                            <i class="mdi mdi-clock-outline"></i>
-                                            کالای دیجیتال
-                                            <button class="btn btn-light btn-continue-search" type="submit">
-                                                <i class="fa fa-angle-left"></i>
-                                            </button>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="mdi mdi-clock-outline"></i>
-                                            آرایشی و بهداشتی
-                                            <button class="btn btn-light btn-continue-search" type="submit">
-                                                <i class="fa fa-angle-left"></i>
-                                            </button>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="mdi mdi-clock-outline"></i>
-                                            گوشی موبایل
-                                            <button class="btn btn-light btn-continue-search" type="submit">
-                                                <i class="fa fa-angle-left"></i>
-                                            </button>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="mdi mdi-clock-outline"></i>
-                                            تبلت
-                                            <button class="btn btn-light btn-continue-search" type="submit">
-                                                <i class="fa fa-angle-left"></i>
-                                            </button>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="mdi mdi-clock-outline"></i>
-                                            لپ تاپ
-                                            <button class="btn btn-light btn-continue-search" type="submit">
-                                                <i class="fa fa-angle-left"></i>
-                                            </button>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="mdi mdi-clock-outline"></i>
-                                            دوربین
-                                            <button class="btn btn-light btn-continue-search" type="submit">
-                                                <i class="fa fa-angle-left"></i>
-                                            </button>
-                                        </a>
-                                    </li>
-                                </ul>
-                                <div class="localSearchSimple"></div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
