--- a/UI/Views/Shared/Components/SmallGetMenu/View.cshtml
+++ b/UI/Views/Shared/Components/SmallGetMenu/View.cshtml
@@ -16,30 +16,49 @@
         @foreach (var item in Model)
         {
             <li>
-                <a href="/Products?CategoryId=@item.Id" class="" type="button" data-toggle="collapse"
-                   data-target="#collapse_@item.Id" aria-expanded="false" aria-controls="collapseOne">
-                    <i class="mdi mdi-chevron-down"></i>@item.Name
-                </a>
-                <div id="collapse_@item.Id" class="collapse" aria-labelledby="headingOne"
-                     data-parent="#accordionExample" style="">
-                    <ul>
-                        @foreach (var child in item.Children)
-                        {
-                            <li class="has-sub">
-                                <a href="/Products?CategoryId=@child.Id" class="category-level-2">@child.Name</a>
-                                <ul>
-                                    @foreach (var child2 in child.Children)
+                @if(item.Children.Count > 0)
+                {
+                    <a href="/Products?CategoryId=@item.Id" class="" type="button" data-toggle="collapse"
+                       data-target="#collapse_@item.Id" aria-expanded="false" aria-controls="collapseOne">
+                        <i class="mdi mdi-chevron-down"></i>@item.Name
+                    </a>
+                    <div id="collapse_@item.Id" class="collapse" aria-labelledby="headingOne"
+                         data-parent="#accordionExample" style="">
+                        <ul>
+                            @foreach (var child in item.Children)
+                            {
+                                <li class="has-sub">
+                                    @if(child.Children.Count > 0)
                                     {
-                                        <li><a href="/Products?CategoryId=@child2.Id" class="category-level-3">@child2.Name</a></li>
+                                        <a href="/Products?CategoryId=@child.Id" class="category-level-2">@child.Name</a>
+                                        <ul>
+                                            @foreach (var child2 in child.Children)
+                                            {
+                                                <li><a href="/Products?CategoryId=@child2.Id" class="category-level-3">@child2.Name</a></li>
+
+                                            }
+                                        </ul>
+                                    }
+                                    else
+                                    {
+                                        <a href="/Products?CategoryId=@child.Id">@child.Name</a>
 
                                     }
-                                </ul>
-                            </li>
-                        }
 
-                        
-                    </ul>
-                </div>
+                                </li>
+                            }
+
+
+                        </ul>
+                    </div>
+                }
+                else
+                {
+                    <a href="/Products?CategoryId=@item.Id">
+                        @item.Name
+                    </a>
+                }
+                
             </li>
         }
         
