refactor : edit small menu view

--- a/UI/Views/Shared/Components/SmallGetMenu/View.cshtml
+++ b/UI/Views/Shared/Components/SmallGetMenu/View.cshtml
@@ -41,7 +41,7 @@
                                     }
                                     else
                                     {
-                                        <a href="/Products?CategoryId=@child.Id">@child.Name</a>
+                                        <li><a href="/Products?CategoryId=@child.Id" >@child.Name</a></li>
 
                                     }
 
